--- a/css/index.css
+++ b/css/index.css
@@ -901,6 +901,10 @@ footer{
     .footer_title,.footer_social{
         font-size: 20px;
     }
+    /* 탑버튼 */
+    .top_but img{
+        right: 30px;
+    }
 }
 
 
@@ -994,12 +998,12 @@ footer{
         margin-top: 30px;
     }
     /* 탑버튼 */
-    /* .top_but img{
-        width: 40px;
-        height: 40px;
-        bottom: 20px;
-        right: 30px;
-    } */
+    .top_but img{
+        width: 50px;
+        height: 50px;
+        bottom: 30px;
+        right: 10px;
+    }
 }
 
 @media (max-width:500px){
@@ -1073,7 +1077,12 @@ footer{
     }
     /* 푸터 */
     .sendmessage{
-        font-size: 39px;
+        font-size: 38px;
         letter-spacing: 0px;
+    }
+    /* 탑버튼 */
+    .top_but img{
+        width: 40px;
+        height: 40px;
     }
 }
