--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ label[for=hamburger]{
     z-index: 99;
 }
 label[for=hamburger] span{
-    position: fixed;
+    position: absolute;
     height: 2px;
     width: 100%;
     left: 0;
